# mistral-small

./: .gitignore  Cargo.toml  LICENCE  README.md  RELEASE.md  upport - Add pulldown-cmark for markdown parsing - Implement rich markdown rendering including code blocks, lists, and text styling - Update documentation with markdown features"
src/: client.rs  lib.rs  main.rs  models.rs
src/renderer/: markdown.rs  mod.rs  syntax.rs  table.rs
src/ui/: commands.rs  mod.rs  terminal.rs
