[package]
name = "mistral-small"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
colored = "2.1"
async-trait = "0.1"
textwrap = "0.16"
terminal_size = "0.2"
rustyline = "12.0"
clearscreen = "2.0"
dirs = "5.0" 